# atsamd

atsamd-hal-macros/: CHANGELOG.md
boards/atsame54_xpro/: CHANGELOG.md
boards/circuit_playground_express/: CHANGELOG.md
boards/feather_m0/: CHANGELOG.md
boards/feather_m4/: CHANGELOG.md
boards/grand_central_m4/: CHANGELOG.md
boards/itsybitsy_m4/: CHANGELOG.md
boards/metro_m0/: CHANGELOG.md
boards/metro_m4/: CHANGELOG.md
boards/pygamer/: CHANGELOG.md
boards/pyportal/: CHANGELOG.md
boards/qt_py_m0/: CHANGELOG.md  Cargo.toml  memory.x
boards/qt_py_m0/examples/: neopixel.rs
boards/qt_py_m0/src/: lib.rs
boards/samd11_bare/: CHANGELOG.md
boards/wio_terminal/: CHANGELOG.md
hal/: CHANGELOG.md  Cargo.toml
pac/atsamd11c/: CHANGELOG.md
pac/atsamd11d/: CHANGELOG.md
pac/atsamd21e/: CHANGELOG.md
pac/atsamd21g/: CHANGELOG.md
pac/atsamd21j/: CHANGELOG.md
pac/atsamd51g/: CHANGELOG.md
pac/atsamd51j/: CHANGELOG.md
pac/atsamd51n/: CHANGELOG.md
pac/atsamd51p/: CHANGELOG.md
pac/atsame51g/: CHANGELOG.md
pac/atsame51j/: CHANGELOG.md
pac/atsame51n/: CHANGELOG.md
pac/atsame53j/: CHANGELOG.md
pac/atsame53n/: CHANGELOG.md
pac/atsame54n/: CHANGELOG.md
pac/atsame54p/: CHANGELOG.md
